third_party/move/move-compiler-v2/tests/checking/natives/disallowed.move
module 0xc0ffee::m {
    native struct Foo;

    native fun whatever(): u64;
}
